# reproassert

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOAL.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: architecture.md  business-model.md  evaluation.md  launch-plan.md  market-validation.md  release.md  roadmap.md  sandbox-profiles.md  security-model.md  threat-model.md
evidence/: snapshot-producer-self-fixture.json
examples/: deterministic_generator.py
launch/: README.md  benchmark-release-checklist.md  maintainer-validation-packet.md  outreach-drafts.md  spend-authorization-template.md
schemas/: benchmark-campaign.schema.json  benchmark-case.schema.json  benchmark-event.schema.json  benchmark-object-source-receipt.schema.json  benchmark-run.schema.json  benchmark-snapshot-receipt.schema.json  benchmark-summary.schema.json  benchmark-v02-amendment.schema.json  benchmark-v02-campaign-finalization.schema.json  benchmark-v02-campaign-freeze.schema.json  benchmark-v02-case-package.schema.json  benchmark-v02-cases-preparation.schema.json  benchmark-v02-causal-control-set.schema.json  benchmark-v02-chronology-evidence.schema.json  benchmark-v02-dataset-container-attestation.schema.json  benchmark-v02-embargoed-result.schema.json  benchmark-v02-exact-image-authorization.schema.json  benchmark-v02-exact-image-capability-index.schema.json  benchmark-v02-exact-preregistration.schema.json  benchmark-v02-exact-scored-result.schema.json  benchmark-v02-execution-authorization.schema.json  benchmark-v02-execution-freeze.schema.json  benchmark-v02-execution-request-bindings.schema.json  benchmark-v02-instance-candidate-evaluation.schema.json  benchmark-v02-instance-gold-smoke.schema.json  benchmark-v02-leak-audited-cohort-plan.schema.json  benchmark-v02-mapping-consensus-set.schema.json  benchmark-v02-mapping-packet-set.schema.json  benchmark-v02-object-source-receipt.schema.json  benchmark-v02-preregistration.schema.json  benchmark-v02-public-aggregate.schema.json  benchmark-v02-replay-bundle.schema.json  benchmark-v02-replay-result.schema.json  benchmark-v02-semantic-review-set.schema.json  benchmark-v02-semantic-verification.schema.json  benchmark-v021-amendment-review-submission.schema.json  (+9 more)
scripts/: ci_change_scope.py  (+2 more)
(+281 files in other folders)
